--- a/assets/quick-order-list.css
+++ b/assets/quick-order-list.css
@@ -156,7 +156,7 @@ quick-order-list .quantity__button {
 .variant-item__name {
   display: block;
   font-size: 1.6rem;
-  letter-spacing: 0.06rem;
+  /*letter-spacing: 0.06rem;*/
   line-height: calc(1 + 0.5 / var(--font-body-scale));
 }
 
@@ -208,7 +208,7 @@ quick-order-list-remove-button {
 
 .quick-order-list__button-cancel {
   font-size: 1.5rem;
-  letter-spacing: 0.06rem;
+  /*letter-spacing: 0.06rem;*/
 }
 
 @media screen and (min-width: 750px) and (max-width: 989px) {
