--- a/assets/template-giftcard.css
+++ b/assets/template-giftcard.css
@@ -57,7 +57,7 @@ h2,
   font-family: var(--font-heading-family);
   font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
-  letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
+  /*letter-spacing: calc(var(--font-heading-scale) * 0.06rem);*/
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   text-align: center;
 }
